<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

	<groupId>com.afklm.sic.repindmsv</groupId>
	<artifactId>manage-tribes</artifactId>
    <version>${repind.version}</version>
    <packaging>jar</packaging>
    <name>Manage Tribes</name>
    <description>Manage FB Family</description>

	<parent>
		<groupId>com.afklm.repind</groupId>
		<artifactId>repind-root-cf</artifactId>
		<version>1.0.24-SNAPSHOT</version>
	</parent>

    <properties>
        <docker.image.prefix>springio</docker.image.prefix>
        <java.version>17</java.version>
		<springfox.version>3.0.0</springfox.version>
		<opex.version>2.0.0</opex.version>
		<afws.version>3.5.0</afws.version>
		<afws.version>3.0.0</afws.version>
		<springboot.version>2.7.8</springboot.version>
		<yaml.version>2.0</yaml.version>
        <spring-cloud-dependencies.version>Finchley.SR2</spring-cloud-dependencies.version>
        <spring.cloud.k8s.version>1.0.0.RELEASE</spring.cloud.k8s.version>
		<!-- JaCoCo Properties -->
        <jacoco.version>0.8.8</jacoco.version>
        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
        <sonar.language>java</sonar.language>
    </properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.kafka</groupId>
				<artifactId>kafka-clients</artifactId>
				<version>1.1.1</version>
			</dependency>
			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${springboot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<!-- SnakeYAML v1.30 is used by springboot by default, but Argos vulnerability -->
				<groupId>org.yaml</groupId>
				<artifactId>snakeyaml</artifactId>
				<version>${yaml.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<build>
		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${springboot.version}</version>
				<configuration>
					<mainClass>com.afklm.repindmsv.tribe.Application</mainClass>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>jacoco-initialize</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-site</id>
                        <phase>package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.26</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>1.5.3.Final</version>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>
						<compilerArg>
							-Amapstruct.defaultComponentModel=spring
						</compilerArg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						--add-opens java.base/java.lang=ALL-UNNAMED
						--add-opens java.base/java.util=ALL-UNNAMED
						--add-exports java.base/sun.nio.ch=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

    <dependencies>
		<!-- Spring -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        
		<!-- Neo4J -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-neo4j</artifactId>
		</dependency>
        <dependency>
		    <groupId>org.neo4j</groupId>
		    <artifactId>neo4j-ogm-http-driver</artifactId>
			<version>3.2.36</version>
		</dependency>
		<dependency>
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j-ogm-core</artifactId>
			<version>3.2.20</version>
		</dependency>
		<!-- Manage cluster issues -->
		<dependency>
		    <groupId>com.github.ben-manes.caffeine</groupId>
		    <artifactId>caffeine</artifactId>
		</dependency>
		
		<!-- Swagger -->
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>${springfox.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>spring-context</artifactId>
					<groupId>org.springframework</groupId>
				</exclusion>
				<exclusion>
					<artifactId>spring-aop</artifactId>
					<groupId>org.springframework</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>${springfox.version}</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-bean-validators</artifactId>
			<version>${springfox.version}</version>
		</dependency>
		
		<!-- JSON -->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-joda</artifactId>
		</dependency>
		<dependency>
		    <groupId>ch.qos.logback.contrib</groupId>
		    <artifactId>logback-jackson</artifactId>
		    <version>0.1.5</version>
		</dependency>
		<dependency>
            <groupId>ch.qos.logback.contrib</groupId>
            <artifactId>logback-json-classic</artifactId>
		    <version>0.1.5</version>
        </dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>2.0.1.Final</version>
		</dependency>
		
		<dependency>
			<groupId>com.klm.opex</groupId>
			<artifactId>opex-logback</artifactId>
			<version>${opex.version}</version>
		</dependency>

		<dependency>
			<groupId>com.klm.opex</groupId>
			<artifactId>opex-web</artifactId>
			<version>${opex.version}</version>
		</dependency>

		<dependency>
			<groupId>com.klm.opex</groupId>
			<artifactId>opex-core</artifactId>
			<version>${opex.version}</version>
		</dependency>

		<dependency>
			<groupId>com.klm.opex</groupId>
			<artifactId>opex-jaxws</artifactId>
			<version>${opex.version}</version>
		</dependency>
		
		<!-- Airfrance -->
		<dependency>
			<groupId>com.afklm.soa.jaxws</groupId>
			<artifactId>sdfw-consumer-deps</artifactId>
			<version>${afws.version}</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>com.afklm.soa.jaxws.wss</groupId>
			<artifactId>jaxws-sec</artifactId>
			<version>${afws.version}</version>
		</dependency>
		<dependency>
			<groupId>com.afklm.repind</groupId>
			<artifactId>common</artifactId>
			<version>${repind.version}</version>
			<scope>compile</scope>
		</dependency>

		<!-- MapStruct Mapping -->
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>1.5.3.Final</version>
		</dependency>
		
        <!-- Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- slf4j -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.26</version>
		</dependency>

		<!-- Log -->
		<dependency>
			<groupId>com.afklm.tecc</groupId>
			<artifactId>como-logback-appender</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.logging</groupId>
			<artifactId>jboss-logging</artifactId>
			<version>3.4.1.Final</version>
		</dependency>
		<dependency>
			<groupId>org.neo4j.test</groupId>
			<artifactId>neo4j-harness</artifactId>
			<version>3.5.35</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-nop</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

    </dependencies>

</project>
